# S.H.N.U.K.-Project

./: README.md  helloworld.txt  pamparam.kum  test.kum  КУМИР.pptx
joker/: CMakeLists.txt  joker.json  jokermodule.cpp  jokermodule.h
